[package]
name = "max"
version = "0.1.0"
authors = ["LapinoLapidus <LapinoLapidus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "*"
serde_json = "*"
lazy_static = "*"
rand = "*"
dotenv = "*"